--- a/css/main.css
+++ b/css/main.css
@@ -2,36 +2,34 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
-  padding:0;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Merriweather', sans-serif;
   font-style: normal;
   font-size: 16px;
   line-height: 1;
 }
 
-.top{
+.wrapper {
+  width: 1170px;
+  margin: 0 auto;
+}
+
+.header {
   position: fixed;
   width: 100%;
   background: white;
   top:0;
   left:0;
-  z-index: 100;
+  z-index: 10000;
 }
 
-
-.wrapper{
-  width: 1170px; 
-  margin: 0 auto;
-
-}
-
-.header {
+.header__block {
   display: flex;
-  align-items: center; 
-  top: 0;
+  align-items: center;
   background-color: white;
   width: 100%;
   animation: banner;
@@ -43,53 +41,49 @@ body {
 @keyframes banner {
   0% {
     transform: translateY(-150%);
-}
-100% {
-  transform: translateY(0%);
-  }  
+  }
+
+  100% {
+    transform: translateY(0%);
+    }
 }
 
-.header .logotype{
+.header .logo {
   font-size: 48px;
   line-height: 56px;
 }
 
-.header .svg__d {
-  animation:D 4s;
+.logo {
+  display: block;
+  text-decoration: none;
+  color: black;
 }
 
-@keyframes D {
-  0% {
-    fill: white;
-  }
-  50% {
-    fill: yellowgreen;
-  }
-  100% {
-    fill: yellow;
-  }
+.logo__title {
+  font-weight: bold;
+  position: relative;
 }
 
-.svg__ecora{
-  animation: ecora 4s ;
+.logo__title::before {
+  position: absolute;
+  left: 50%;
+  content: '';
+  height: 40px;
+  height: 5px;
+  background: #FFD120;
+  transition: all 0.5s linear;
+  width: 0;
+  bottom: 0;
 }
 
-@keyframes ecora {
-  0% {
-    fill: white;
-  }
-  50% {
-    fill: gray;
-  }
-  100% {
-    fill: black;
-  }
+.logo__title:hover::before {
+  width: 190px;
+  margin-left: -95px;
 }
 
-.header .menu ul{
+.header .menu ul {
   display: flex;
 }
-
 
 .header .menu ul li {
   margin-right: 76px;
@@ -103,13 +97,12 @@ body {
   color: #000000;
   text-decoration: none;
   position: relative;
-  
 }
 
-.header .menu a::before, .header .menu a::after{
+.header .menu a::before, .header .menu a::after {
   content: "";
   display: none;
-  position:absolute;
+  position: absolute;
   width: 14px;
   height: 14px;
   border-color: #FED330;
@@ -117,13 +110,12 @@ body {
   background-color: transparent;
 }
 
-.header .menu a:hover:before{
+.header .menu a:hover:before {
   content: "";
   display: block;
   left: -25px;
   top: 23px;
   border-width: 0 0 2px 2px;
-  
 }
 
 .header .menu a:hover:after{
@@ -134,20 +126,19 @@ body {
   border-width: 2px 2px 0 0;
 }
 
-.menu .btn-mobile{
+.menu .btn-mobile {
   display: none;
 }
 
-.icons__color{
+.icons__color {
   color:#000000;
 }
 
-
-.icons__item{
+.icons__item {
   position: relative;
 }
 
-.badge{
+.badge {
   width: 18px;
   height: 16px;
   border-radius: 50%;
@@ -168,14 +159,14 @@ body {
 
 .categories{
   background:#FAFAFA;
+  scroll-margin-top: 56px;
 }
 
-.flexbox{
+.flexbox {
   display: flex;
-  
 }
 
-.info{
+.info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -183,19 +174,18 @@ body {
   padding-top: 130px;
 }
 
-.picture{
+.picture {
   padding-top: 100px;
 }
-
 
 @keyframes info {
   100% {
     opacity: 1;
     transform: translateX(0%);
- }  
-} 
+  }
+}
 
-.info__title{
+.info__title {
   font-weight: bold;
   font-size: 64px;
   line-height: 75px;
@@ -205,10 +195,9 @@ body {
   animation: info 2s forwards;
   animation-delay: 1s;
   text-align: left;
-  
 }
 
-.info__text{
+.info__text {
   font-weight: normal;
   font-size: 18px;
   line-height: 150%;
@@ -219,10 +208,9 @@ body {
   transform: translateX(-50px);
   animation: info 2s forwards;
   animation-delay: 2s;
-  
 }
 
-.info__btn{
+.info__btn {
   width: 250px;
   height: 60px;
   background: #FED330;
@@ -240,27 +228,31 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  transition: all .5s ease-in;
+}
 
-  
- }
-
-.info__btn:hover{
+.info__btn:hover {
   background: white;
   color:#FED330;
 }
 
-.info__btn:active{
+.info__btn:active {
   background: #FFD120;
   color: black;
 }
 
-.picture{
+.picture {
   width: 50%;
 }
 
 /* section furniture */
 
-.info-1__subtitle{
+.about-us {
+  scroll-margin-top: 56px;
+}
+
+.info-1__subtitle {
   font-weight: bold;
   font-size: 48px;
   line-height: 56px;
@@ -270,7 +262,8 @@ body {
   margin-top: 80px;
   margin-bottom: 30px;
 }
-.info-1__text{
+
+.info-1__text {
   font-weight: normal;
   font-size: 18px;
   line-height: 150%;
@@ -279,21 +272,22 @@ body {
   padding-bottom: 77px;
 }
 
-.decor{
+.decor {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
-.decor__box{
+.decor__box {
   margin: 0;
+  cursor: pointer;
 }
 
-.decor__img{
+.decor__img {
   position: relative;
 }
 
-.decor__img:before{
+.decor__img:before {
   position: absolute;
   width: 30px;
   height: 30px;
@@ -308,7 +302,7 @@ body {
   border-color: transparent;
 }
 
-.decor__img:after{
+.decor__img:after {
   position: absolute;
   width: 30px;
   height: 30px;
@@ -322,7 +316,8 @@ body {
   border-width: 2px 2px 0 0;
   border-color: transparent;
 }
-.decor__pic:before{
+
+.decor__pic:before {
   position: absolute;
   width: 30px;
   height: 30px;
@@ -336,7 +331,8 @@ body {
   border-width: 0 2px 2px 0;
   border-color: transparent;
 }
-.decor__pic:after{
+
+.decor__pic:after {
   position: absolute;
   width: 30px;
   height: 30px;
@@ -364,21 +360,21 @@ body {
   border-color: #202020;
 }
 
-.decor__pic:hover::before{
+.decor__pic:hover::before {
   transition: all .8s ease-in;
   transform: translate(15px, 15px);
   border-color: #202020;
-  
+
 }
 
-.decor__pic:hover::after{
+.decor__pic:hover::after {
   transition: all .8s ease-in;
   transform: translate(-15px, 15px);
   border-color: #202020;
 
 }
 
-.decor__text{
+.decor__text {
   font-weight: bold;
   font-size: 24px;
   line-height: 150%;
@@ -388,11 +384,10 @@ body {
   padding-top: 25px;
 }
 
-.decor__box:hover .decor__text{
+.decor__box:hover .decor__text {
   transform: translateY(15px);
   transition: all .8s ease-in;
 }
-
 
 .grid{
   display: grid;
@@ -401,28 +396,28 @@ body {
   margin-top: 100px;
   margin-bottom: 10px;
 }
- 
-.link{
+
+.link {
   background: #F5F5F5;
   text-decoration: none;
 }
 
-.link__one{
+.link__one {
   grid-row: 1/3;
   position: relative;
 }
 
-.link-wrap{
+.link-wrap {
   position: absolute;
   bottom: 28px;
   right: 15px;
 }
-.link__img{
+.link__img {
   padding-top: 10px;
   padding-left: 5px;
 }
 
-.link__text{
+.link__text {
   font-weight: bold;
   font-size: 24px;
   line-height: 130%;
@@ -430,7 +425,7 @@ body {
   color: #202020;
 }
 
-.link__btn{
+.link__btn {
   width: 200px;
   height: 54px;
   font-weight: bold;
@@ -443,34 +438,35 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all .4s ease-in;
 }
 
-.link__btn:hover{
+.link__btn:hover {
   background: white;
   color:#000000;
 }
 
-.link__btn:active{
+.link__btn:active {
   background:#424242;
 }
 
-.link__two{
+.link__two {
   position: relative;
   height: 200px;
 }
 
-.link__wrap-1{
+.link__wrap-1 {
   position: absolute;
   right: 20px;
   bottom:28px;
 }
 
-.link__img-1{
+.link__img-1 {
   padding-top:37px;
   padding-left: 27px;
 }
 
-.link__text-1{
+.link__text-1 {
   font-weight: bold;
   font-size: 24px;
   line-height: 130%;
@@ -480,13 +476,17 @@ body {
   padding-bottom:20px;
 }
 
-.link__img-2{
+.link__img-2 {
   padding-left: 56px;
 }
 
 /* section Products */
 
-.info-2__subtitle{
+.products {
+  scroll-margin-top: 56px;
+}
+
+.info-2__subtitle {
   font-weight: bold;
   font-size: 48px;
   line-height: 56px;
@@ -496,7 +496,8 @@ body {
   margin-top: 100px;
   margin-bottom: 30px;
 }
-.info-2__text{
+
+.info-2__text {
   font-weight: normal;
   font-size: 18px;
   line-height: 150%;
@@ -505,23 +506,22 @@ body {
   padding-bottom: 53px;
 }
 
-.flexbox-1{
+.flexbox-1 {
   display: flex;
   flex-wrap:wrap;
   justify-content: space-around;
-  
 }
 
-.item{
+.item {
   text-decoration: none;
   position: relative;
 }
 
-.item:nth-child(1){
+.item:nth-child(1) {
   margin-bottom: 80px;
 }
 
-.item__discount{
+.item__discount {
   width: 60px;
   height: 25px;
   background: black;
@@ -531,18 +531,18 @@ body {
   right: 27px;
 }
 
-.item__total{
+.item__total {
   text-align: center;
   font-weight: bold;
   font-size: 16px;
   line-height: 150%;
 }
 
-.item__picture{
+.item__picture {
   position: relative;
 }
 
-.item:hover .item__picture:after{
+.item:hover .item__picture:after {
   content: "";
   display: inline-block;
   position: absolute;
@@ -554,8 +554,7 @@ body {
   background: rgba(0, 0, 0, 0.1);
 }
 
-
-.item__bottom-text{
+.item__bottom-text {
   font-weight: bold;
   font-size: 20px;
   line-height: 150%;
@@ -566,7 +565,7 @@ body {
   padding-bottom: 15px;
 }
 
-.item__price{
+.item__price {
   font-weight: bold;
   font-size: 24px;
   line-height: 150%;
@@ -577,7 +576,7 @@ body {
   width: 100%;
 }
 
-.price__sale{
+.price__sale {
   font-weight: bold;
   font-size: 24px;
   line-height: 150%;
@@ -587,7 +586,7 @@ body {
   color: #999999;
 }
 
-.item__btn{
+.item__btn {
   font-weight: bold;
   font-size: 18px;
   line-height: 21px;
@@ -600,16 +599,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all .4s ease-in;
 }
 
-.item:hover .item__btn{
+.item:hover .item__btn {
   background: white;
   color:#FED330;
 }
 
 /* last-section */
 
-.info-3__subtitle{
+.contacts {
+  scroll-margin-top: 56px;
+}
+
+.info-3__subtitle {
   font-weight: bold;
   font-size: 48px;
   line-height: 56px;
@@ -619,7 +623,7 @@ body {
   margin-top: 150px;
   margin-bottom: 30px;
 }
-.info-3__text{
+.info-3__text {
   font-weight: normal;
   font-size: 18px;
   line-height: 150%;
@@ -628,20 +632,18 @@ body {
   padding-bottom: 70px;
 }
 
-
-
-.flexbox-2{
+.flexbox-2 {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-.input{
+.input {
   margin-bottom: 30px;
   margin-right: 30px;
 }
 
-.input__name, .input__phone, .input__email{
+.input__name, .input__phone, .input__email {
   width: 360px;
   height: 50px;
   border: 1px solid #DDDDDD;
@@ -658,7 +660,7 @@ body {
   outline: none;
 }
 
-.textarea__message{
+.textarea__message {
   width: 360px;
   height: 210px;
   border: 1px solid #DDDDDD;
@@ -672,18 +674,19 @@ body {
   resize: none;
 }
 
-.textarea__message:focus{
+.textarea__message:focus {
   border: 1px solid #202020;
   outline: none;
 }
 
-.send{
+.send {
   text-align: center;
 }
 
-.send__submit{
+.send__submit {
   width: 200px;
   height: 50px;
+  font-family: "Merriweather", sans-serif;
   font-size: 20px;
   line-height: 130%;
   text-transform: uppercase;
@@ -692,11 +695,24 @@ body {
   border: 1px solid  #202020;
   margin-bottom: 147px;
   margin-top: 50px;
+  cursor: pointer;
+  transition: all .4s ease-in;
 }
 
-.footer__text{
+.send__submit:hover {
+  color: black;
+  background: white;
+}
+
+.footer {
+  height: 100px;
   background: #202020;
-  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer__text {
   width: 100%;
   font-weight: bold;
   font-size: 20px;
@@ -705,6 +721,6 @@ body {
   line-height: 48px;
 }
 
-.heart{
+.footer__heart {
   padding: 14px 10px 0 10px;
 }
