fix: chahge menu

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,8 @@ body {
 .logo__title {
   font-weight: bold;
   position: relative;
+  z-index: 10;
+  color: darkorange;
 }
 
 .logo__title::before {
