--- a/css/media.css
+++ b/css/media.css
@@ -154,21 +154,18 @@
 		margin-top: 30px;
 	}
 
-	.menu{
+	.menu {
         display: none;
 	}
 
 	.header .menu ul {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
-		transition: all .3s ease-in;
-
 	}
 
 	.header .menu ul li {
 		display: flex;
-		justify-content: space-around;
+		padding-left: 20px;
 	}
 
 	.header .menu a {
@@ -208,7 +205,7 @@
         transition: all 0.5s
     }
 
-    .hamburger--active{
+    .hamburger--active {
         position: fixed;
         left: 0;
         top: 0;
@@ -216,12 +213,8 @@
         width: 50%;
         height: 100vh;
         background: #2D303A;
-		padding-top: 20%;
-		transition: all .3s ease-in;
-	}
-
-	.sectionn {
-		opacity: 0.5;
+		padding-top: 30%;
+		transition: all .6s ease-in;
 	}
 }
 
@@ -229,6 +222,10 @@
 
 	.logo__title {
 		font-size: 32px;
+	}
+
+	.header .menu a {
+		font-size: 22px;
 	}
 
 	.info-1__subtitle {
@@ -256,6 +253,10 @@
 
 	.item {
 		width: calc(67% - 10px);
+	}
+
+	.input__name, .input__phone, .input__email {
+		width: calc(100% - 10px);
 	}
 
 	.infooo, .textarea {
